table.html에 세로형 테이블 추가, 팝업 js 수정, 주석오타, 가이드확인용 css수정하였습니다.

--- a/admin/html/grid.html
+++ b/admin/html/grid.html
@@ -18,8 +18,8 @@
 	<!-- 가이드 확인용// -->
 	<style>
 		#wrap{padding:30px;}
-		.list-style{margin-bottom:40px;}
-		.list-style li{font-size:16px;}
+		.h3-title + .list-style{margin-bottom:40px;}
+		.h3-title + .list-style li{font-size:16px;}
 	</style>
 	<!-- //가이드 확인용 -->
 </head>
