--- a/admin/html/layout_sortable.html
+++ b/admin/html/layout_sortable.html
@@ -74,9 +74,9 @@
 			<!-- cont-body// -->
 			<section class="cont-body">
 
-				<!-- 소제목 영역// -->
+				<!-- 대제목 영역// -->
 				<h2 class="h2-title">메뉴관리</h2>
-				<!-- //소제목 영역 -->
+				<!-- //대제목 영역 -->
 				
 				<!-- 드래그앤드롭// -->
 				<h3 class="sortable-title">드로그앤드롭 all</h3>
