--- a/admin/html/layout_list.html
+++ b/admin/html/layout_list.html
@@ -74,9 +74,9 @@
 			<!-- cont-body// -->
 			<section class="cont-body">
 
-				<!-- 소제목 영역// -->
+				<!-- 대제목 영역// -->
 				<h2 class="h2-title">회원관리</h2>
-				<!-- //소제목 영역 -->
+				<!-- //대제목 영역 -->
 
 				<!-- 테이블// -->
 				<table class="table">
