--- a/admin/html/sortable.html
+++ b/admin/html/sortable.html
@@ -18,8 +18,8 @@
 	<!-- 가이드 확인용// -->
 	<style>
 		#wrap{padding:30px;}
-		.list-style{margin-bottom:40px;}
-		.list-style li{font-size:16px;}
+		.h3-title + .list-style{margin-bottom:40px;}
+		.h3-title + .list-style li{font-size:16px;}
 	</style>
 	<!-- //가이드 확인용 -->
 </head>
