--- a/admin/html/table.html
+++ b/admin/html/table.html
@@ -109,6 +109,16 @@
 					</td>
 				</tr>
 				<tr>
+					<th scope="row">input[type="search"]</th>
+					<td>
+						<div class="inputbox">
+							<input type="search" id="">
+							<label for="" class="hidden">입력해주세요.</label>
+							<a href="javascript:;" class="btn_search">검색하기</a>
+						</div>
+					</td>
+				</tr>
+				<tr>
 					<th scope="row">input[type="file"]</th>
 					<td>
 						<div class="filebox">
@@ -230,16 +240,6 @@
 						<ul class="list-style">
 							<li>시작일부터 종료일까지 경우 datepicker에 period 클래스를 넣어주세요.</li>
 						</ul>
-					</td>
-				</tr>
-				<tr>
-					<th scope="row">inputbox (input+검색)</th>
-					<td>
-						<div class="inputbox">
-							<input type="text" id="">
-							<label for="" class="hidden">입력해주세요.</label>
-							<a href="javascript:;" class="btn_search">검색하기</a>
-						</div>
 					</td>
 				</tr>
 				<tr>
@@ -434,6 +434,24 @@
 					</td>
 				</tr>
 				<tr>
+					<th scope="row">input[type="search"]</th>
+					<td>
+						<div class="inputbox">
+							<input type="search" id="">
+							<label for="" class="hidden">입력해주세요.</label>
+							<a href="javascript:;" class="btn_search">검색하기</a>
+						</div>
+					</td>
+					<th scope="row">input[type="file"]</th>
+					<td>
+						<div class="filebox">
+							<input type="file" id="file_03" name="file_03" class="hidden">
+							<input class="upload-name" value="파일을 선택해주세요" disabled>
+							<label for="file_03">파일첨부</label>
+						</div>
+					</td>
+				</tr>
+				<tr>
 					<th scope="row">input[type="text"]</th>
 					<td>
 						<input type="text">
@@ -445,24 +463,6 @@
 								<option value="">default</option>
 								<option value="">option22</option>
 							</select>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th scope="row">inputbox (input+검색)</th>
-					<td>
-						<div class="inputbox">
-							<input type="text" id="">
-							<label for="" class="hidden">입력해주세요.</label>
-							<a href="javascript:;" class="btn_search">검색하기</a>
-						</div>
-					</td>
-					<th scope="row">input[type="file"]</th>
-					<td>
-						<div class="filebox">
-							<input type="file" id="file_03" name="file_03" class="hidden">
-							<input class="upload-name" value="파일을 선택해주세요" disabled>
-							<label for="file_03">파일첨부</label>
 						</div>
 					</td>
 				</tr>
