--- a/admin/html/button.html
+++ b/admin/html/button.html
@@ -27,16 +27,46 @@
 <body>
 	<div id="wrap">
 
-		<h3 class="h3-title">버튼 타입</h3>
-
+		<h3 class="h3-title">버튼 type</h3>
 		<!-- 버튼 타입// -->
 		<a href="javascript:;" class="btn">a 태그</a>
 		<button type="button" class="btn">button 태그</button>
 		<input type="button" class="btn" value="input 태그">
 		<!-- //버튼 타입 -->
 
-		<h3 class="h3-title">버튼 왼쪽 정렬</h3>
+		
+		<h3 class="h3-title">버튼 default</h3>
+		<!-- 버튼 default// -->
+		<button type="button" class="btn gray">gray</button>
+		<button type="button" class="btn white">white</button>
+		<button type="button" class="btn">default</button>
+		<button type="button" class="btn blue">blue</button>
+		<!-- //버튼 default -->
 
+		
+		<h3 class="h3-title">버튼 disabled</h3>
+		<!-- 버튼 disabled// -->
+		<button type="button" class="btn gray" disabled>gray</button>
+		<button type="button" class="btn white" disabled>white</button>
+		<button type="button" class="btn" disabled>default</button>
+		<button type="button" class="btn blue" disabled>blue</button>
+		<!-- //버튼 disabled -->
+
+
+		<h3 class="h3-title">버튼 big</h3>
+		<!-- 버튼// -->
+		<div class="btn-wrap">
+			<div>
+				<button type="button" class="btn big gray">gray</button>
+				<button type="button" class="btn big white">white</button>
+				<button type="button" class="btn big">default</button>
+				<button type="button" class="btn big blue">blue</button>
+			</div>
+		</div>
+		<!-- //버튼 -->
+
+
+		<h3 class="h3-title">버튼 왼쪽 정렬</h3>
 		<!-- 버튼// -->
 		<div class="btn-wrap">
 			<div class="fl"><!-- 왼쪽 정렬 : fl 클래스 -->
@@ -50,7 +80,6 @@
 
 
 		<h3 class="h3-title">버튼 오른쪽 정렬</h3>
-
 		<!-- 버튼// -->
 		<div class="btn-wrap">
 			<div class="fr"><!-- 오른쪽 정렬 : fr 클래스  -->
@@ -64,7 +93,6 @@
 
 
 		<h3 class="h3-title">버튼 양쪽 정렬</h3>
-
 		<!-- 버튼// -->
 		<div class="btn-wrap">
 			<div class="fl"><!-- 왼쪽 정렬 : fl 클래스  -->
@@ -83,8 +111,7 @@
 		<!-- //버튼 -->
 
 
-		<h3 class="h3-title">버튼이 가운데에 있는 경우</h3>
-
+		<h3 class="h3-title">버튼 가운데 정렬</h3>
 		<!-- 버튼// -->
 		<div class="btn-wrap">
 			<div>
@@ -92,20 +119,6 @@
 				<button type="button" class="btn white">white</button>
 				<button type="button" class="btn gray">gray</button>
 				<button type="button" class="btn blue">blue</button>
-			</div>
-		</div>
-		<!-- //버튼 -->
-
-
-		<h3 class="h3-title">버튼 big</h3>
-
-		<!-- 버튼// -->
-		<div class="btn-wrap">
-			<div>
-				<button type="button" class="btn big gray">gray</button>
-				<button type="button" class="btn big white">white</button>
-				<button type="button" class="btn big">default</button>
-				<button type="button" class="btn big blue">blue</button>
 			</div>
 		</div>
 		<!-- //버튼 -->
