필수값 표시 추가

--- a/admin/html/table.html
+++ b/admin/html/table.html
@@ -52,6 +52,15 @@
 			</colgroup>
 			<tbody>
 				<tr>
+					<th scope="row">필수표시 <span class="required">*</span></th>
+					<td>
+						<div class="text">
+							필수값은 <strong>required 클래스</strong> 선언해주세요.<br>
+							ex) &lt;span class="required"&gt;*&lt;/span&gt;
+						</div>
+					</td>
+				</tr>
+				<tr>
 					<th scope="row" class="vt">text</th>
 					<td>
 						<div class="text">
@@ -405,9 +414,13 @@
 			</colgroup>
 			<tbody>
 				<tr>
-					<th scope="row">텍스트</th>
+					<th scope="row">텍스트 <span class="required">*</span></th>
 					<td>
-						<div class="text">텍스트입니다.</div>
+						<div class="text">
+							텍스트입니다.<br>
+							필수값은 <strong>required 클래스</strong> 선언해주세요.<br>
+							ex) &lt;span class="required"&gt;*&lt;/span&gt;
+						</div>
 					</td>
 					<th scope="row">list-style</th>
 					<td>
