로고이미지 수정, A Content 텍스트 수정

--- a/admin/html/lnb.html
+++ b/admin/html/lnb.html
@@ -22,7 +22,7 @@
 
 		<!-- lnb -->
 		<div id="lnb">
-			<h1><a href="javascript:;">A-Content</a></h1>
+			<h1><a href="javascript:;"><img src="../img/logo_white.png" alt="A Content"></a></h1>
 			<nav>
 				<ul>
 					<li><!-- 현재페이지 : li class="active" 추가 -->
