--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A-Content 관리자</title>
+    <title>A Content 관리자</title>
     <style>
       body{font-family:sans-serif, Malgungothic, "맑은고딕", Dotum, "돋움";}
       h1{margin-bottom:20px;font-size:26px;text-align:center;}
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-  <h1>A-Content 관리자 INDEX</h1>
+  <h1>A Content 관리자 INDEX</h1>
   <div class="wrap_tbl">
     <table id="focus" class="guideTbl01">
       <colgroup>
