--- a/admin/html/layout_detail.html
+++ b/admin/html/layout_detail.html
@@ -22,7 +22,7 @@
 
 		<!-- lnb// -->
 		<div id="lnb">
-			<h1><a href="javascript:;">A-Content</a></h1>
+			<h1><a href="javascript:;"><img src="../img/logo_white.png" alt="A Content"></a></h1>
 			<nav>
 				<ul>
 					<li><!-- 현재페이지 : li class="active" 추가 -->
@@ -93,7 +93,7 @@
 							<td>
 								<div class="text">abc123</div>
 							</td>
-							<th scope="row">ABO 7</th>
+							<th scope="row">ABO</th>
 							<td>
 								<div class="text">7480000</div>
 							</td>
